[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8" # make sure this is the latest version
#rand = "0.8.3"
#winit = "0.26"
#env_logger = "0.9"
#log = "0.4"
#wgpu = "0.13"